# vats

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  vats_start.bat
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: bulk.rs  cache.rs  config.rs  mod.rs  process.rs  status.rs  summarize.rs
desktop/src-tauri/src/process/: executor.rs
desktop/src-tauri/src/utils/: mod.rs  paths.rs  python.rs
desktop/src/components/: badge.tsx  index.ts  progress.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx
desktop/src/features/bulk/: BulkProcess.tsx  index.ts
desktop/src/features/config/: AIProvider.tsx  ConfigPanel.tsx  GPUConfig.tsx  PerformanceConfig.tsx  WhisperConfig.tsx
desktop/src/features/home/: Home.tsx  MenuGrid.tsx  index.ts
desktop/src/features/process/: ProcessSingle.tsx  index.ts
desktop/src/features/status/: SystemStatus.tsx
desktop/src/features/summarize/: SummarizeDoc.tsx  index.ts
desktop/src/features/terminal/: Terminal.tsx  index.ts  useTerminalStream.ts
desktop/src/lib/: utils.ts
desktop/src/services/: index.ts  types.ts  vats.ts
desktop/src/store/: configStore.ts  index.ts  processStore.ts
desktop/src/styles/: globals.css
prompts/: vats_concall_summary_fabric.txt  vats_summarize_meeting_fabric.txt  vats_summary_meeting_ultimate.txt  vats_summary_prompt.txt  vats_summary_prompt_document.txt  vats_summary_prompt_generic_content.txt  vats_summary_prompt_meeting.txt  vats_summary_prompt_technical_document.txt  vats_summary_prompt_video.txt
src/vats/: __init__.py  __main__.py  app.py  audio.py  bulk.py  cache.py  clean.py  cli.py  config.py  diarize.py  docsummarize.py  format.py  summarize.py  transcribe.py
tests/: test_vats.py
